{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 17,
  "lineage": "44c79f4e-184d-8c74-ca7c-3b83d3dd6adf",
  "resources": [
    {
      "module": "module.ec2_instance_us_east_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:654654179071:instance/i-09a431640df2e44e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a431640df2e44e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fb6ac79dfa9fbda",
            "private_dns": "ip-10-0-1-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_ip": "100.28.218.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0303ea9560de4a8ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089b344729c5e86c6",
            "tags": {
              "Name": "us-east-1-instance"
            },
            "tags_all": {
              "Name": "us-east-1-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d630951ce36c1ad4"
            ]
          },
          "dependencies": [
            "module.security_group_us_east_1.aws_security_group.instance",
            "module.subnets_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_us_east_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033fabdd332044f06",
            "arn": "arn:aws:ec2:us-east-2:654654179071:instance/i-060dd31a52eaa2e66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060dd31a52eaa2e66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a96317e21f62f52d",
            "private_dns": "ip-10-0-2-86.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.86",
            "public_ip": "18.118.26.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db1304cf9c9680bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ab394a159cf5915",
            "tags": {
              "Name": "us-east-2-instance"
            },
            "tags_all": {
              "Name": "us-east-2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bfb84f24acfb8941"
            ]
          },
          "dependencies": [
            "module.security_group_us_east_2.aws_security_group.instance",
            "module.subnets_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw_us_east_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654179071:internet-gateway/igw-0587690abb059e4a7",
            "id": "igw-0587690abb059e4a7",
            "owner_id": "654654179071",
            "tags": {
              "Name": "us-east-1-igw"
            },
            "tags_all": {
              "Name": "us-east-1-igw"
            },
            "vpc_id": "vpc-099fb7c634b6ee1d8"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw_us_east_2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654179071:internet-gateway/igw-0d1c9f286d4dd1d6a",
            "id": "igw-0d1c9f286d4dd1d6a",
            "owner_id": "654654179071",
            "tags": {
              "Name": "us-east-2-igw"
            },
            "tags_all": {
              "Name": "us-east-2-igw"
            },
            "vpc_id": "vpc-012b872f3d1c5e66d"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_us_east_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcc21642f9140aeb",
            "arn": "arn:aws:ec2:us-east-1:654654179071:elastic-ip/eipalloc-0dcc21642f9140aeb",
            "domain": "vpc",
            "id": "eipalloc-0dcc21642f9140aeb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-199-83.compute-1.amazonaws.com",
            "public_ip": "3.216.199.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_us_east_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcc21642f9140aeb",
            "association_id": "eipassoc-0817f4d95e2359064",
            "connectivity_type": "public",
            "id": "nat-016d72d5b5d33558d",
            "network_interface_id": "eni-092129d7308851d8f",
            "private_ip": "10.0.1.61",
            "public_ip": "3.216.199.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-089b344729c5e86c6",
            "tags": {
              "Name": "us-east-1-nat"
            },
            "tags_all": {
              "Name": "us-east-1-nat"
            }
          },
          "dependencies": [
            "module.nat_us_east_1.aws_eip.main",
            "module.subnets_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_us_east_2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de76860ca5ae4e1d",
            "arn": "arn:aws:ec2:us-east-2:654654179071:elastic-ip/eipalloc-0de76860ca5ae4e1d",
            "domain": "vpc",
            "id": "eipalloc-0de76860ca5ae4e1d",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-132-148-102.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.148.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_us_east_2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de76860ca5ae4e1d",
            "association_id": "eipassoc-05030f28fdcd3d231",
            "connectivity_type": "public",
            "id": "nat-0fe6df74c8fb8decc",
            "network_interface_id": "eni-0ec7a06626c748cba",
            "private_ip": "10.0.2.128",
            "public_ip": "3.132.148.102",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02ab394a159cf5915",
            "tags": {
              "Name": "us-east-2-nat"
            },
            "tags_all": {
              "Name": "us-east-2-nat"
            }
          },
          "dependencies": [
            "module.nat_us_east_2.aws_eip.main",
            "module.subnets_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_us_east_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654179071:security-group/sg-0d630951ce36c1ad4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d630951ce36c1ad4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240615134227284600000001",
            "name_prefix": "terraform-",
            "owner_id": "654654179071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-sg"
            },
            "tags_all": {
              "Name": "us-east-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099fb7c634b6ee1d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_us_east_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654179071:security-group/sg-0bfb84f24acfb8941",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfb84f24acfb8941",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240615134227044500000001",
            "name_prefix": "terraform-",
            "owner_id": "654654179071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-2-sg"
            },
            "tags_all": {
              "Name": "us-east-2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-012b872f3d1c5e66d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654179071:subnet/subnet-047604e6e4555b852",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047604e6e4555b852",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654179071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-099fb7c634b6ee1d8"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654179071:subnet/subnet-089b344729c5e86c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089b344729c5e86c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654179071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-099fb7c634b6ee1d8"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654179071:subnet/subnet-0084f5c72b17690f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0084f5c72b17690f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654179071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-012b872f3d1c5e66d"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654179071:subnet/subnet-02ab394a159cf5915",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ab394a159cf5915",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654179071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-012b872f3d1c5e66d"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654179071:vpc/vpc-099fb7c634b6ee1d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07993a380391173ef",
            "default_route_table_id": "rtb-0cdee0580b4a2752b",
            "default_security_group_id": "sg-04ce29cf8eace365f",
            "dhcp_options_id": "dopt-0099cfd72710da4b4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099fb7c634b6ee1d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cdee0580b4a2752b",
            "owner_id": "654654179071",
            "tags": {
              "Name": "VPC for EC2 instance"
            },
            "tags_all": {
              "Name": "VPC for EC2 instance"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654179071:vpc/vpc-012b872f3d1c5e66d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02673e716259bebf1",
            "default_route_table_id": "rtb-0dc4b77eaa82d2b26",
            "default_security_group_id": "sg-0ee5a470c3978b647",
            "dhcp_options_id": "dopt-0289411d724eb1603",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012b872f3d1c5e66d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc4b77eaa82d2b26",
            "owner_id": "654654179071",
            "tags": {
              "Name": "VPC for EC2 instance"
            },
            "tags_all": {
              "Name": "VPC for EC2 instance"
            }
          }
        }
      ]
    }
  ]
}